評価ボード用

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
-            "projectEnvName": "nucleo_f446re",
+            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard_test/.pio/build/main/firmware.elf",
+            "projectEnvName": "main",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/Mukaida/.platformio/platforms/ststm32/misc/svd/STM32F446x.svd",
@@ -26,8 +26,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
-            "projectEnvName": "nucleo_f446re",
+            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard_test/.pio/build/main/firmware.elf",
+            "projectEnvName": "main",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/Mukaida/.platformio/platforms/ststm32/misc/svd/STM32F446x.svd"
@@ -36,8 +36,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
-            "projectEnvName": "nucleo_f446re",
+            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard_test/.pio/build/main/firmware.elf",
+            "projectEnvName": "main",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "svdPath": "C:/Users/Mukaida/.platformio/platforms/ststm32/misc/svd/STM32F446x.svd",
