--- a/platformio.ini
+++ b/platformio.ini
@@ -8,18 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nucleo_f446re]
+[env:main]
+build_type = debug
 platform = ststm32
-board = nucleo_f446re
+board = nucleo_f446ze
 framework = stm32cube
 board_build.stm32cube.custom_config_header = yes
 build_flags = 
 	-ICore/FreeRTOS/Source/include
 	-ICore/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-ICore/Inc/ExternalCommunication
 	-mthumb
 	-mfpu=fpv4-sp-d16
 	-mfloat-abi=softfp
 	-std=gnu++17
+
+[env:test]
+build_type = test
+platform = native
+build_flags = 
+	-ICore/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-ICore/FreeRTOS/Source/include
+	;-I.pio\libdeps\test\googletest\googlemock\include\gmock\gmock.h
+	-Itest/mock
+	-D_UNIT_TEST
+	-std=gnu++17
+test_framework = googletest
+
 [platformio]
 include_dir = Core/Inc
 src_dir = Core
