--- a/stm32pio.ini
+++ b/stm32pio.ini
@@ -10,9 +10,9 @@ cubemx_script_content = config load ${ioc_file_absolute_path}
 platformio_ini_patch_content = [platformio]
 	include_dir = Inc
 	src_dir = Src
-board = nucleo_f446re
-ioc_file = MainControlBoard.ioc
-cleanup_ignore = MainControlBoard.ioc
+board = nucleo_f446ze
+ioc_file = umigame_test.ioc
+cleanup_ignore = umigame_test.ioc
 cleanup_use_git = False
 inspect_ioc = True
 
