--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
+            "executable": "c:/Work/003_Git/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
             "projectEnvName": "nucleo_f446re",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -26,7 +26,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
+            "executable": "c:/Work/003_Git/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
             "projectEnvName": "nucleo_f446re",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
@@ -36,7 +36,7 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/Mukaida/STM32CubeIDE/workspace_1.10.1/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
+            "executable": "c:/Work/003_Git/MainControlBoard/.pio/build/nucleo_f446re/firmware.elf",
             "projectEnvName": "nucleo_f446re",
             "toolchainBinDir": "C:/Users/Mukaida/.platformio/packages/toolchain-gccarmnoneeabi/bin",
             "internalConsoleOptions": "openOnSessionStart",
