--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,17 @@ build_flags =
 	-mfpu=fpv4-sp-d16
 	-mfloat-abi=softfp
 	-std=gnu++17
+[env:test]
+build_type = test
+platform = native
+build_flags = 
+	-ICore/FreeRTOS/Source/portable/GCC/ARM_CM4F
+	-ICore/FreeRTOS/Source/include
+	;-I.pio\libdeps\test\googletest\googlemock\include\gmock\gmock.h
+	-Itest/mock
+	-D_UNIT_TEST
+	-std=gnu++17
+test_framework = googletest
 [platformio]
 include_dir = Core/Inc
 src_dir = Core
