--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ build_flags =
 	-mfpu=fpv4-sp-d16
 	-mfloat-abi=softfp
 	-std=gnu++17
+    -D_NONE_BOB
 [env:test]
 build_type = test
 platform = native
